2016-02-16  Nik Nyby  <nnyby@columbia.edu>

	* Host URL can now be set to anything in the
	extension options.

2016-01-21  Nik Nyby  <nnyby@columbia.edu>

	* Fix Vimeo asset collection bug.

2016-01-12  Nik Nyby  <nnyby@columbia.edu>

	* Fix bug that occurs with host url when options aren't present.

2016-01-08  Nik Nyby  <nnyby@columbia.edu>

	* Host URL is now configurable in the extension options.
	* Internal code refactoring.

2015-12-14  Nik Nyby  <nnyby@columbia.edu>

	* Fix host url messaging.

2015-12-08  Nik Nyby  <nnyby@columbia.edu>

	* Fix image collection on learn.columbia.edu.

2015-12-02  Nik Nyby  <nnyby@columbia.edu>

	* Updated mediathread-collect, containing html parsing
	security fixes.

2015-11-25  Nik Nyby  <nnyby@columbia.edu>

	* Moved init code out of common code.

2015-11-13  Nik Nyby  <nnyby@columbia.edu>

	* Moved browser-independent extension code into src/common.

2015-11-09  Nik Nyby  <nnyby@columbia.edu>

	* Fixed bug where video thumbnails could be missing when
	using the poster attribute.
	* Hide "no assets found" error when asynchronous assets
	get found.
	* Fix a display bug where the asset wasn't always centered
	on the collection page.
	* Collect fullsize images on asia.si.edu.

2015-11-04  Nik Nyby  <nnyby@columbia.edu>

	* Fix image collection overflow problem.

2015-10-30  Nik Nyby  <nnyby@columbia.edu>

	* Fix error that can occur when <video> and
	<audio> has no source.

2015-10-07  Nik Nyby  <nnyby@columbia.edu>

	* Fix metadata collection for the <video> tag

2015-10-05  Nik Nyby  <nnyby@columbia.edu>

	* Fix image collection on artstor.org

2015-09-23  Nik Nyby  <nnyby@columbia.edu>

	* Don't alter the aspect ratio of the image in the asset
	finder
	* Use better image thumbnails on flickr
	* Fix video collection on the Columbia Film Language Glossary
	* Fix asset collection on various sites

2015-09-10  Nik Nyby  <nnyby@columbia.edu>

	* Fix collection on YouTube

2015-08-27  Nik Nyby  <nnyby@columbia.edu>
