@@ -62,6 +62,7 @@
         </form>
         <div id="infospace" class="hidden">Saved.</div>
 
+        <script src="lib/underscore-min.js"></script>
         <script src="lib/jquery-2.2.0.min.js"></script>
         <script src="src/options.js"></script>
     </body>
