@@ -1,3 +1,8 @@
+2016-02-19  Nik Nyby  <nnyby@columbia.edu>
+
+	* Debounce custom url save on keyup so it doesn't fire each
+	time.
+
 2016-02-16  Nik Nyby  <nnyby@columbia.edu>
 
 	* Host URL can now be set to anything in the
